--- a/application/templates/popular_product.html
+++ b/application/templates/popular_product.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-{#{% from 'helpers.html' import products_macro with context %}#}
+{% from 'helpers.html' import products_macro with context %}
 {#        <script type="text/javascript" src="{{ url_for ('static', filename= "js/single_product.js") }}"></script>#}
 {##}
 {##}
@@ -10,62 +10,12 @@
 <div class="container">
     <div id="product_container" class="row ct-u-paddingTop20">
         <div class="ct-product animated fadeIn">
+            {% for product in products.items %}
+                <div class="col-sm-4 col-xs-12 ct-u-paddingTop40">
 
-          {% for product in products.items %}
-              <div class="col-sm-4 col-xs-12 ct-u-paddingTop40">
-
-                <div class="product-title">
-                    <h5 class="ct-imgWrapper-name opacity-title ct-u-size24">{{ product.title }}</h5>
+                {{ products_macro(product, dict_like, list_of_favourite) }}
                 </div>
-                    <div class="ct-imgWrapper">
-
-
-
-                        <div class="ct-shopIcon">
-                            {% if product in list_of_favourite %}
-                                        <i class="fa fa-star favourite product-fav" id="{{product.id}}" aria-hidden="true"></i>
-                                    {% else%}
-                                        <i class="fa fa-star-o not-favourite product-fav" id="{{product.id}}" aria-hidden="true"></i>
-                                    {% endif %}
-                        </div>
-                        <div class="image-container">
-                            {% if product.image %}
-                                <img class="product-img" src="{{ url_for('static',filename="media/" + product.image) }}"/>
-                            {% else %}
-                                <img class="product-img" src="{{ url_for('static',filename="image/default_product.jpg") }}"/>
-                            {% endif %}
-                        </div>
-                        <div class="ct-imgWrapper-triangle"></div>
-                    <div class="ct-starRating">
-                            <span id="like_count_like_product_{{ product.id }}">{{ product.like_count }} </span><img class="smile"
-                                                                                                 src="{{ url_for('static',filename="image/reaction-like.png" ) }}"
-                                                                                                 />
-                            <span id="unlike_count_like_product_{{ product.id }}">{{ product.unlike_count }} </span><img class="smile"
-                                                                                                                         src="{{ url_for('static',filename="image/reaction-unlike.png" ) }}"
-                                                                                                                         />
-                            <span id="funny_count_like_product_{{ product.id }}">{{ product.funny_count }} </span><img class="smile"
-                                                                                                                       src="{{ url_for('static',filename="image/reaction-funny.png" ) }}"
-                                                                                                                       />
-                            <span id="angry_count_like_product_{{ product.id }}">{{ product.angry_count }} </span><img class="smile"
-                                                                                                                       src="{{ url_for('static',filename="image/reaction-angry.png" ) }}"
-                                                                                                                       />
-
-                        </div>
-
-                    </div>
-
-
-
-
-                <p class="ct-u-paddingTop30"> {{ product.description | truncate(150, False) }}</p>
-                <span class="ct-fw-600 ct-u-motiveDark ct-u-size30">{{ product.price }}</span>
-                <a class="ct-fakeButton text-uppercase pull-right ct-u-motiveDark--bg">In stock</a>
-            </div>
-
-
-
-
-        {% endfor%}
+            {% endfor %}
          </div>
 
     </div>
@@ -75,4 +25,3 @@
 
 
 
-{#{{ products_macro(product, dict_like, list_of_favourite, 3) }}#}
