--- a/application/templates/product_comment_form.html
+++ b/application/templates/product_comment_form.html
@@ -1,8 +1,21 @@
-                            <form action="{{ url_for('singleproduct', product_id=product_id) }}" method="post"  enctype="multipart/form-data" class="form-horizontal answer_form" id ="{{ parent_id }}">
-                                    <p>
-                                          {{ form.csrf_token }}
-                               {{form.text(class_="form-control my_textarea", rows="2")}}<br>
-                                     {{form.file}}<br>
+                            <form action="{{ url_for('singleproduct', product_id=product_id) }}" method="post"  enctype="multipart/form-data" class="answer_form" id ="{{ parent_id }}">
+
+                                          {{ form.hidden_tag() }}
+                               <div class="form-group col-xs-9 col-sm-10">
+                               {{form.text(class_="form-control", rows="2")}}
+                                    </div>
+                                 <div id ="hide" class="form-group col-xs-3 col-sm-2">
+                            <label class="hand-cursor">
+                               {{form.file}}
+                                <span class="fa fa-camera"></span>
+                                <span class="photo_text hidden-xs">Image</span>
+                            </label>
+                            <button type="submit" class="btn btn-motive">comment</button>
+
+
+
+                        </div>
+
 
                                         {% if form.errors %}
                                             <ul class=errors>
@@ -11,21 +24,16 @@
                                             {% endfor %}
                                             </ul>
                                         {% endif %}
-                                      </p>
 
 
-                                <div class="control-group">
-                                    <div class="controls">
-                                        <button type="submit" class="btn btn-success">Add comment</button>
-                                    </div>
-                                </div>
+
                           </form>
 
 
 
 
 <script>
-$(".form-horizontal.answer_form").submit(function(event) {
+$(".answer_form").submit(function(event) {
     var formData = new FormData($(this)[0]);
 
     $.ajax({
@@ -36,7 +44,7 @@ $(".form-horizontal.answer_form").submit(function(event) {
         contentType: false,
         success: function (data) {
             alert(123);
-            $("#comment").html(data.comments);
+            $("#comments").html(data.comments);
             $("textarea#text").val("");
 
         },
