--- a/application/templates/product_comments.html
+++ b/application/templates/product_comments.html
@@ -1,36 +1,36 @@
 
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
-{#<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>#}
 
 {% from 'helpers.html' import product_comment_macro with context %}
-
     {%- for key, value in comment_tree.items() recursive -%}
 
         {% if key %}
-            <li>
+            <ul class="ct-mediaList list-unstyled">
             {% for comment in comments %}
                 {% if comment.id == key %}
-                    {% if comment.deleted %}
+                        {% if comment.deleted %}
                             comment has been deleted
                         {%else%}
-                            {{ product_comment_macro(comment, dict_like) }}
-                    {% endif %}
+                            <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ product_comment_macro(comment, dict_like) }}</li>
+
+
+                        {% endif %}
                 {% endif %}
             {% endfor %}
-                <ul class="comment_ul">{{ loop(value.items()) }}</ul>
-             </li>
+                <ul class="ct-mediaList list-unstyled">{{ loop(value.items()) }}</ul>
+             </ul>
         {% endif %}
     {%- endfor -%}
+
+
 
 
 <script>
 $(document).ready(function() {
 
-
-
 // if user not the comments'author, user can discuss other comment
 // data send by ajax on server where render template with updated comment part
-$(".discussion").click(function (event){
+$(".discussion.product-form").click(function (event){
     var id = $(this).attr('id');
     $(".answer#answer" + id).slideToggle();
     var user = $(this).attr('user');
