--- a/application/templates/single_post.html
+++ b/application/templates/single_post.html
@@ -4,13 +4,11 @@
     <section class="ct-u-paddingBottom10">
         <div class="container">
 
-            <div class="row">
-                <div class="col-xs-12 col-sm-8">
-                <div class="ct-pageSectionHeader ct-u-paddingBoth20">
-                    <div class="post-title">
+        <div class="ct-pageSectionHeader ct-u-paddingBoth30">
+
                     <h3 class="text-uppercase ct-u-size30 text-center">{{ post.title }}</h3>
-                     </div>
-                        <div class="edit-post-block dropdown ct-u-paddingBoth20 ct-u-size22">
+
+                        <div class="edit-post-block dropdown ct-u-paddingTop5 text-center ct-u-size22">
 
                             <i class="fa fa-pencil-square-o  dropdown-toggle" aria-hidden="true"  data-toggle="dropdown">edit</i>
                             <ul class="dropdown-menu" role="menu">
@@ -24,6 +22,10 @@
                         </div>
 
                 </div>
+
+            <div class="row">
+                <div class="col-xs-12 col-sm-8">
+
                     <div class="ct-u-paddingBottom30 ct-u-borderBottomGrayLighter ct-clear-both">
 
                         {% if post.image %}
@@ -85,7 +87,7 @@
                                 <li><h4>like</h4></li>
                             </ul>
                         </div>
-                        <div id="button_comment1" class="comment-button">
+                        <div id="button_comment1" class="comment-button post-form">
                             <ul>
                                 <li>
                                     <i class="fa fa-comments-o" aria-hidden="true"></i>
@@ -99,9 +101,9 @@
 
 
                                     {% if if_favorite %}
-                                        <i class="fa fa-star favourite" id="{{post.id}}" aria-hidden="true"></i>
+                                        <i class="fa fa-star favourite post-fav" id="{{post.id}}" aria-hidden="true"></i>
                                     {% else%}
-                                        <i class="fa fa-star-o not-favourite" id="{{post.id}}" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o not-favourite post-fav" id="{{post.id}}" aria-hidden="true"></i>
                                     {% endif %}
                                 </li>
                                 <li><h4>Add to fav</h4></li>
