--- a/application/templates/user_container/user_contain_post_saved.html
+++ b/application/templates/user_container/user_contain_post_saved.html
@@ -30,15 +30,34 @@
     </div>
 
 
+   <div class="ct-blog ct-js-blogMasonry ct-u-borderBottomGrayLighter ct-u-paddingBottom20">
     {% for post in posts %}
+         <div class="col-sm-6 col-md-4 ct-js-blogMasonry-item" >
+
         {{ posts_macro(post, dict_like, list_of_favourite) }}
+         </div>
+
     {% endfor %}
+
+    </div>
 
 {% else %}
     <p>You have not saved yet</p>
 
 {% endif %}
 <script>
+    jQuery(window).on("load",function () {
+
+
+        if ($().masonry && ($('.ct-js-blogMasonry').length > 0) && ($devicewidth > 767)) {
+            $('.ct-js-blogMasonry').masonry({
+                itemSelector: '.ct-js-blogMasonry-item',
+                masonry: {
+                }
+            });
+        }
+
+});
     $(document).ready(function() {
 
 
