--- a/application/templates/user_container/user_contain_product.html
+++ b/application/templates/user_container/user_contain_product.html
@@ -30,10 +30,14 @@
         </ul>
     </div>
 
-    {% for product in products %}
-            {{ products_macro(product, dict_like, list_of_favourite, 5) }}
+    <div class="ct-product animated fadeIn">
+            {% for product in products %}
+                <div class="col-sm-6 col-md-4 col-xs-12 ct-u-paddingTop20">
 
-    {% endfor %}
+                {{ products_macro(product, dict_like, list_of_favourite) }}
+                </div>
+            {% endfor %}
+         </div>
 {% else %}
     <p>You have not product yet</p>
     <p>Could you add one?</p>
