--- a/application/templates/user_edit.html
+++ b/application/templates/user_edit.html
@@ -1,43 +1,78 @@
 {% extends "base.html" %}
-{% block body %}
-<h1>Edit Your Profile</h1>
-<form action="{{url_for('user_edit', username = user.username )}}" method="post" name="edit" enctype=multipart/form-data>
-    {{ form.csrf_token }}
-    <table>
-        <tr>
-            <td>Your username:</td>
-            <td>{{form.username(size = 24)}}</td>
-        </tr>
-        <tr>
-            <td>About yourself:</td>
-            <td>{{form.about_me(cols = 32, rows = 4)}}</td>
-        </tr>
-        <tr>
+{% from "security/_macros.html" import render_field_with_errors, render_field %}
 
-            <div class="hiddenfile">
-                {{form.file}}
-            </div>
-            <button id="change_avatar">Choose</button>
-        </tr>
-        <tr>
-            <td></td>
-            {% if form.errors %}
-                    <ul class=errors>
-                     {% for field, errors in form.errors.items(): %}
-                        {% for error in errors %}
-                      <li>Error in the field {{field}}:{{ error }}</li>
-                        {% endfor %}
-                    {% endfor %}
-                    </ul>
-            {% endif %}
-            <td><input type="submit" value="Save Changes"></td>
-        </tr>
-    </table>
+{% block body %}
+<section class="ct-u-paddingBo40">
+<div class="container">
+    <div class="ct-sectionHeader ct-u-paddingBoth20">
+        <h2 class="ct-u-size34">add product</h2>
+    </div>
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
+<form action="{{url_for('user_edit', username = user.username )}}" method="post" name="edit" enctype=multipart/form-data>
+    {{ form.hidden_tag() }}
+            {{ render_field_with_errors(form.username, class="form-control") }}
+            {{ render_field_with_errors(form.about_me, class="form-control", rows = 3) }}
+
+
+
+   <div  id ="hide" class="form-group big-form-file">
+                {{form.file(id="file", class="inputfile", data_multiple_caption="{count} files selected")}}
+
+                                <label for="file"class="hand-cursor">
+                                <span class="photo_text hidden-xs ct-u-size24"><i class="fa fa-camera ct-u-size30" aria-hidden="true"></i> Select image</span>
+
+                                </label>
+
+
+
+        </div>
+
+
+
+
+
+    <div class="control-group">
+        <div class="controls">
+          <button type="submit" class="btn btn-motive btn-form">Publish</button>
+        </div>
+    </div>
 </form>
+    </div>
+</div>
+</div>
+</section>
 <script>
-    $('#change_avatar').click(function(event){
-        event.preventDefault();
-        $(".hiddenfile").show();
-    });
-</script>
+
+
+jQuery(window).on("load",function () {
+                var inputs = document.querySelectorAll( '.inputfile' );
+Array.prototype.forEach.call( inputs, function( input )
+{
+	var label	 = input.nextElementSibling,
+		labelVal = label.innerHTML;
+
+	input.addEventListener( 'change', function( e )
+	{
+		var fileName = '';
+		if( this.files && this.files.length > 1 ) {
+            fileName = this.files.length + " files selected";
+
+		}
+		else
+			fileName = e.target.value.split( '\\' ).pop();
+
+		if( fileName )
+			label.querySelector( 'span' ).innerHTML = fileName
+		else
+			label.innerHTML = labelVal;
+	});
+});
+});
+            </script>
+{#    $('#change_avatar').click(function(event){#}
+{#        event.preventDefault();#}
+{#        $(".hiddenfile").show();#}
+{#    });#}
+
 {% endblock %}
