--- a/application/static/style/style.css
+++ b/application/static/style/style.css
@@ -3373,3 +3373,144 @@ img:hover + .avatar-edit{
 .ct-u-motiveLight2--bg {
     background-color: #f8f8f8;
 }
+
+.alert.alert-danger {
+    position: fixed;
+    top: 0;
+    left: 20%;
+    right: 20%;
+    z-index: 999;
+    display: none;
+
+}
+
+/*pagination*/
+
+.pagination > li > a,
+.pagination > li > span {
+  font-weight: 600;
+  font-size: 14px;
+  border-color: #b3b3b3;
+  border-radius: 50%;
+  border-width: 2px;
+  width: 44px;
+  height: 44px;
+  line-height: 29px;
+  color: inherit;
+  margin-right: 10px;
+}
+.pagination > li > a i,
+.pagination > li > span i {
+  color: #ffffff;
+}
+.pagination > li > a .fa,
+.pagination > li > span .fa {
+  position: relative;
+}
+.pagination > li > a .fa-chevron-left,
+.pagination > li > span .fa-chevron-left {
+  left: -1px;
+}
+.pagination > li > a .fa-chevron-right,
+.pagination > li > span .fa-chevron-right {
+  right: -1px;
+}
+.pagination > li span {
+  opacity: 0.5;
+}
+.pagination > li:hover > a,
+.pagination > li:focus > a,
+.pagination > li:active > a,
+.pagination > li:hover > span,
+.pagination > li:focus > span,
+.pagination > li:active > span {
+  border-color: #b3b3b3;
+  color: inherit;
+  background-color: inherit;
+}
+.pagination > li:first-child > a,
+.pagination > li:last-child > a,
+.pagination > li:first-child > span,
+.pagination > li:last-child > span {
+  border-radius: 50%;
+}
+.pagination > li.active > a,
+.pagination > li.active > span,
+.pagination > li.active > a:hover,
+.pagination > li.active > span:hover,
+.pagination > li.active > a:focus,
+.pagination > li.active > span:focus {
+  background-color: transparent;
+  border-color: #1f8bf3;
+  color: #1f8bf3;
+}
+.pagination .right a,
+.pagination .right:hover a,
+.pagination .right:before,
+.pagination .right:hover:before {
+  background-color: #1f8bf3;
+  border-color: #1f8bf3;
+  line-height: 29px;
+}
+.pagination .left a,
+.pagination .left:hover a,
+.pagination .left:before,
+.pagination .left:hover:before {
+  cursor: default;
+  background-color: #4c505e;
+  border-color: #4c505e;
+  line-height: 29px;
+}
+.pagination .right a:before {
+  -webkit-transition: all 0.6s ease;
+  -moz-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  content: "";
+  position: absolute;
+  border-radius: 100%;
+  top: 1px;
+  bottom: 1px;
+  left: 1px;
+  right: 1px;
+  border: 3px solid #1f8bf3;
+  opacity: 0;
+}
+.pagination .right a:hover:before {
+  opacity: 1;
+  bottom: -8px;
+  top: -8px;
+  left: -8px;
+  right: -8px;
+}
+.pagination-lg > li > a,
+.pagination-lg > li > span {
+  padding: 9px 15px;
+}
+.ct-pagination-notice {
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  margin: 20px;
+  font-weight: 600;
+}
+.ct-pagination {
+  text-align: center;
+  margin: 30px 0;
+}
+.ct-pagination:before,
+.ct-pagination:after {
+  content: " ";
+  display: table;
+}
+.ct-pagination:after {
+  clear: both;
+}
+.ct-pagination a {
+  color: inherit;
+}
+.ct-pagination a:hover,
+.ct-pagination a:focus,
+.ct-pagination a:active {
+  color: #1f8bf3;
+}
