--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -141,6 +141,7 @@
         </div>
 
     </section>
+    <h2><a href="{{ url_for("social.auth", backend="facebook") }}">Facebook</a></h2>
 
 <script>
 $(document).ready(function() {
