--- a/application/templates/last_posts.html
+++ b/application/templates/last_posts.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% from 'helpers.html' import posts_macro with context %}
 {% block body %}
-    <section class="ct-blogGrid ct-u-paddingBottom50">
-        <div class="ct-pageSectionHeader ct-u-paddingBoth50">
-            <h3 class="text-uppercase ct-u-size40 text-center">BLOG</h3>
+    <section class="ct-blogGrid ct-u-paddingBottom20">
+        <div class="ct-pageSectionHeader ct-u-paddingBottom40">
+            <h3 class="text-uppercase ct-u-size50 text-center">BLOG</h3>
+        </div>
 
             <div class="container">
                 <div class="row">
@@ -17,8 +18,39 @@
                     </div>
 
                 </div>
+
+
+
+
+            <div class="ct-u-marginBoth20 ct-pagination">
+                <ul class="pagination pagination-lg">
+                    {% if posts.has_next and posts.has_prev %}
+                        <li class="right"><a href="{{ url_for('last_posts', page = posts.prev_num) }}"><i class="fa fa-chevron-left"></i></a></li>
+                        <li><a href="{{ url_for('last_posts', page = posts.prev_num) }}">{{ posts.prev_num }}</a></li>
+                        <li class="active"><a href="#">{{ page }}</a></li>
+
+                        <li><a href="{{ url_for('last_posts', page = posts.next_num) }}">{{ posts.next_num }}</a></li>
+
+                        <li class="right"><a href="{{ url_for('last_posts', page = posts.next_num) }}"><i class="fa fa-chevron-right"></i></a></li>
+
+                    {% elif posts.has_next %}
+                        <li class="left"><a href=""><i class="fa fa-chevron-left"></i></a></li>
+                        <li class="active"><a href="#">{{ page }}</a></li>
+                        <li><a href="{{ url_for('last_posts', page = posts.next_num) }}">{{ posts.next_num }}</a></li>
+
+                        <li class="right"><a href="{{ url_for('last_posts', page = posts.next_num) }}"><i class="fa fa-chevron-right"></i></a></li>
+
+
+                {% elif posts.has_prev %}
+                        <li class="right"><a href="{{ url_for('last_posts', page = posts.prev_num) }}"><i class="fa fa-chevron-left"></i></a></li>
+                        <li><a href="{{ url_for('last_posts', page = posts.prev_num) }}">{{ posts.prev_num }}</a></li>
+                        <li class="active"><a href="#">{{ page }}</a></li>
+                        <li class="left"><a href="#"><i class="fa fa-chevron-right"></i></a></li>
+
+                    {% endif %}
+                </ul>
             </div>
-        </div>
+            </div>
     </section>
 <script>
 jQuery(window).on("load",function () {
