--- a/application/templates/user.html
+++ b/application/templates/user.html
@@ -49,10 +49,10 @@
 
 
     {% if current_user == user %}
-        <section class="ct-u-motiveLight2--bg  ct-u-paddingBoth20">
+        <section class="ct-u-paddingBoth20">
         <div class="row">
 
-        <div class="user-activities panel-group ">
+        <div class="user-activities panel-group">
             <div class="col-xs-12 col-sm-6 col-md-3">
 
                     <div class="panel panel-default">
