--- a/templates/home.html
+++ b/templates/home.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
                  <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
-                    <li role="presentation" class=""><div class="ct-tabBorder"><a href="#" role="tab" data-toggle="tab">Latest posts </a></div><div class="mini-triangle"></div></li>
+                    <li role= class=""><div class="ct-tabBorder"><a href="{{url_for("last_posts")}}">Latest posts </a></div><div class="mini-triangle"></div></li>
                 </ul>
             </div>
 
@@ -119,7 +119,7 @@
         <div class="container">
             <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
                  <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
-                    <li role="presentation" class=""><div class="ct-tabBorder"><a href="#" role="tab" data-toggle="tab">Popular product </a></div><div class="mini-triangle"></div></li>
+                    <li class=""><div class="ct-tabBorder"><a href="{{url_for("popular_product")}}" >Popular product </a></div><div class="mini-triangle"></div></li>
                 </ul>
             </div>
 
