--- a/templates/user.html
+++ b/templates/user.html
@@ -121,8 +121,10 @@
             </div>
         </div>
             <div class="row ct-u-paddingTop10 child-active">
-                <div id="active-container">
-                    {% include '/user_container/user_contain_post.html' %}
+                <div class="col-md-12">
+                    <div id="active-container">
+                        {% include '/user_container/user_contain_post.html' %}
+                    </div>
                 </div>
             </div>
 
