--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
     <div class="container">
         <h1>404</h1>
         <p class="ct-u-size34 ct-u-paddingTop20 ct-u-paddingBottom40">This page could not be found</p>
-       <a onclick="location.href='index.html'" class="btn btn-motive">
+       <a href="{{ url_for('index') }}" class="btn btn-motive">
            <span>go back to homepage  <i class="fa fa-location-arrow"> </i></span>
        </a>
     </div>
