--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -37,7 +37,7 @@
                         {% endif %}
                         <p class="ct-u-motiveLight">
                             By
-                            <a href="#">{{ post.author.username }}</a>
+                            <a href="{{ url_for('user', username =post.author.username ) }}">{{ post.author.username }}</a>
                             on
                             {{ post.published_at|datetime }}
 
